player move and obstacle collision done

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <script src="js/player.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/obstacle.js"></script>
+    <script src="js/render.js"></script>
     <script src="js/app.js"></script>
 </scripts>
 </html>
