--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <scripts>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/weapon.js"></script>
     <script src="js/player.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/obstacle.js"></script>
