repopulate obstacles done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spy Hunter Clone</title>
+    <title>Block Hunter</title>
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -28,9 +28,9 @@
 <body>
     <div class="game-realm">
         <div class="game-interact">
-            <h1>Spy Hunter Clone</h1>
+            <h1>Block Hunter</h1>
             <h2>Time: <span class="min">0</span>:<span class="sec">00</span></h1>
-            <h3>Level: <span class="level-meter">1</span></h3>
+            <h3>Level: <span class="level-meter">0</span></h3>
             <h3>Score: <span class="score-meter">0</span></h3>
             <h4>Lives: <span class="lives-meter">3</span></h4>
             <h4>Missiles: <span class="missile-meter">10</span></h4>
