High Scores done

--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
             <button class="button" id="shoot-gun" disabled="true">Shoot Gun</button><br>
             <button class="button" id="fire-missile" disabled="true">Fire Missile</button><br>
             <button class="button" id="drop-oil" disabled="true">Drop Oil</button><br>
-            <button class="blue button" id="start-over">START OVER</button><br>
+            <button class="blue button" id="next-player">NEXT PLAYER</button><br>
         </div>
         <div class="game-container">
-            <h1 id="player-name">Player 1</h1>
             <canvas id="game-canvas" width=600px height=600px></canvas>
+        </div>
+        <div class='high-scores'>
+            <h1>HIGH SCORES</h1>
+            <h2 id="player-one"><span id="player-one-name">Player1</span>: <span id="player-one-score">0</span></h2>
+            <h2 id="player-two"><span id="player-two-name">Player2</span>: <span id="player-two-score">0</span></h2>
         </div>
     </div>
     <div class="game-comms" class= "clearfix">
