updated some styling

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h3>Score: <span class="score-meter">0</span></h3>
             <h4>Lives: <span class="lives-meter">3</span></h4>
             <h4>Missiles: <span class="missile-meter">10</span></h4>
-            <h4>Oil Slick: <span class="oil-meter">10</span></h4>
+            <h4>Oil Slicks: <span class="oil-meter">10</span></h4>
             <button class="green button" id="start">START</button><br>
             <button class="red button" id="pause">PAUSE</button><br>
             <button class="button" id="shoot-gun" disabled="true">Shoot Gun</button><br>
@@ -47,12 +47,12 @@
         </div>
         <div class='high-scores'>
             <h1>HIGH SCORES</h1>
-            <h2 id="player-one"><span id="player-one-name">Player1</span>: <span id="player-one-score">0</span></h2>
-            <h2 id="player-two"><span id="player-two-name">Player2</span>: <span id="player-two-score">0</span></h2>
+            <h2 id="player-one"><span id="player-one-name">Player 1</span>: <span id="player-one-score">0</span></h2>
+            <h2 id="player-two"><span id="player-two-name">Player 2</span>: <span id="player-two-score">0</span></h2>
         </div>
     </div>
     <div class="game-comms" class= "clearfix">
-        <h1>The world needs you to chase the badguys and prevent a nuclear apocalypse. Click START!</h1>
+        <h1>The world needs you to chase the evil mastermind and prevent a nuclear apocalypse. Click START to play!</h1>
     </div>
 </body>
 <scripts>
