--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             <h4>Missiles: <span class="missile-meter">10</span></h4>
             <h4>Oil Slicks: <span class="oil-meter">10</span></h4>
             <button class="green button" id="start">START</button><br>
-            <button class="red button" id="pause">PAUSE</button><br>
-            <button class="button" id="shoot-gun" disabled="true">Shoot Gun</button><br>
-            <button class="button" id="fire-missile" disabled="true">Fire Missile</button><br>
-            <button class="button" id="drop-oil" disabled="true">Drop Oil</button><br>
-            <button class="blue button" id="next-player">NEXT PLAYER</button><br>
+            <button class="red button" id="pause" disabled="true">PAUSE</button><br>
+            <button class="button" id="shoot-gun" disabled="true">Shoot Gun {v} key</button><br>
+            <button class="button" id="fire-missile" disabled="true">Fire Missile {c} key</button><br>
+            <button class="button" id="drop-oil" disabled="true">Drop Oil Slick {x} key</button><br>
+            <button class="blue button" id="next-player" disabled="true">NEXT PLAYER</button><br>
         </div>
         <div class="game-container">
             <canvas id="game-canvas" width=600px height=600px></canvas>
